<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginLeft="6dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/imgNextHome" />

                    <TextView
                        android:id="@+id/tvNexthome"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        tools:text="@string/home_team" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/imgNextAway"/>

                    <TextView
                        android:layout_width="0dp"
                        android:id="@+id/tvNextAway"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        tools:text="@string/away_team" />

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.45">
                <View
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:background="@color/grey_background"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tvNextDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:textAlignment="center"
                    tools:text="@string/date_event" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>