<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:foreground="?android:attr/selectableItemBackground">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDateEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                tools:text="@string/tgl_main" />

            <LinearLayout
                android:id="@+id/linMatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDateEvent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imgHome"
                            android:layout_width="70dp"
                            android:layout_height="70dp" />

                        <TextView
                            android:id="@+id/tvHomeTeam"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:gravity="center_horizontal"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            tools:ignore="RtlCompat"
                            tools:text="@string/home_team" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvHomeScore"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/circle_trans_green"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:text="0" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text=":"
                        android:textColor="@color/transBlack"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvAwayScore"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/circle_trans_green"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:text="0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imgAway"
                            android:layout_width="70dp"
                            android:layout_height="70dp" />

                        <TextView
                            android:id="@+id/tvAwayTeam"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:gravity="center_horizontal"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            tools:ignore="RtlCompat"
                            tools:text="@string/away_team" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>